# summit_ws

install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
install/summit_description/share/ament_index/resource_index/package_run_dependencies/: summit_description
install/summit_description/share/ament_index/resource_index/parent_prefix_path/: summit_description
install/summit_description/share/summit_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/summit_description/share/summit_description/cmake/: summit_descriptionConfig.cmake
install/summit_description/share/summit_description/launch/: summit_launch.py
install/summit_description/share/summit_description/urdf/: summit.urdf.xacro
install/summit_description/share/summit_description/urdf/base/: summit_base.urdf.xacro
install/summit_description/share/summit_description/urdf/wheels/: omni_wheel.urdf.xacro
log/: latest_build
src/summit_description/: CMakeLists.txt  package.xml
src/summit_description/install/: local_setup.sh  setup.bash  setup.sh
src/summit_description/log/: latest_build
src/summit_description/urdf/base/: summit_base.gazebo.xacro
